@@ -1,3 +1,9 @@
+1998-02-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile (OBJECTS, HEADERS): Add Arguments.
+
+	* Arguments.[hm]: New files.
+
 1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* objectbase.h: Change header comment to objectbase.h.
